--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <p>SALEH AYOUB BENABDERRAHMANE, A Computer Science student passionate about software development and problem-solving. Skilled in programming, data analysis, and system design. Knowledgeable in artificial intelligence and cybersecurity, with a strong ability to learn quickly. Seeking to gain practical experience and apply academic knowledge to real-world projects.</p>
             
             <div class="social-icons">
-                <a href="https://discord.com/aizen_2005"><i class="fa-brands fa-discord"></i></a>
+                <a href="https://t.me/saleh_ayoub"><i class="fa-brands fa-telegram"></i></a>
                 
                 <a href="https://github.com/aizen-2005"><i class="fa-brands fa-github"></i></a>
                 <a href="https://www.instagram.com/salh_7k4?igsh=MWgxN3ViOGlmaDQ3bw=="><i class="fa-brands fa-instagram"></i></a>
